--- a/Pipfile
+++ b/Pipfile
@@ -21,10 +21,12 @@ flask-mail = "==0.9.1"
 flask-sqlalchemy = "==2.4.1"
 flask-wtf = "==0.14.3"
 flask-moment = "==0.9.0"
-python-dotenv = "==0.12.0"
-bootstrap-flask = "==1.2.0"
 flask-login = "==0.5.0"
 flask-debugtoolbar = "==0.11.0"
 flask-migrate = "==2.5.3"
-minio = "==7.1.7"
+python-dotenv = "==0.12.0"
+bootstrap-flask = "==1.2.0"
 markdown2 = "==2.4.3"
+sqlalchemy-utils = "==0.38.3"
+faker = "==13.15.1"
+minio = "==7.1.10"
