--- a/blog@.service
+++ b/blog@.service
@@ -3,12 +3,12 @@ Description=Blog
 After=network.target
 
 [Service]
-ExecStart=/home/ubuntu/.pyenv/shims/pipenv run python3 wsgi.py
+ExecStart=/home/ubuntu/.local/bin/pipenv run flask run -p 5000 -h 0.0.0.0
 Restart=always
 RestartSec=10
 StartLimitInterval=0
 User=%i
-WorkingDirectory=/home/ubuntu/bluelog
+WorkingDirectory=/home/ubuntu/linlog
 
 [Install]
 WantedBy=default.target
