更改名称为blinglog并将变量名为blog, 调整email回复部分的右下margin, 调整搜索结果顺序为按时间降序

--- a/blog/static/manifest.json
+++ b/blog/static/manifest.json
@@ -8,7 +8,7 @@
       }
     ],
     "name": "L-ING's Blog",
-    "short_name": "Bluelog",
+    "short_name": "Blog",
     "description": "A blog engine built with Flask.",
     "start_url": "/",
     "background_color": "#2780e3",
