--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: blinglog
     image: hlf01/blinglog
     ports:
-      - 8080:8080
+      - ${HOST_PORT}:8080
     restart: on-failure
     env_file:
       - .env
