--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   blinglog:
     container_name: blinglog
     image: hlf01/blinglog
-    ports:
-      - ${HOST_PORT}:8080
-    restart: on-failure
+    restart: always
+    # 不使用端口映射，因为minio服务器和mysql服务器在本地时会使用127.0.0.1作为地址，所以需要直接使用宿主机的网卡
+    network_mode: host
     env_file:
       - .env
-    command: pipenv run flask run -p 8080 -h 0.0.0.0
+    command: pipenv run flask run -p 5000 -h 0.0.0.0
